--- a/HelloWorld/pom.xml
+++ b/HelloWorld/pom.xml
@@ -10,7 +10,7 @@
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-1</artifactId>
       <version>3.8.2</version>
       <scope>test</scope>
     </dependency>
